fixed background not showing

--- a/css/happytweet.webflow.css
+++ b/css/happytweet.webflow.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../images/excellent-twitter-wallpaper-by-surferzombie (1).jpg');
+  background-image: url('../images/back.jpg');
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   color: #333;
   font-size: 16px;
